--- a/src/components/Home/BlogList/BlogItem/style.css
+++ b/src/components/Home/BlogList/BlogItem/style.css
@@ -1,11 +1,12 @@
 .blogItem-wrap{
     display: flex;
     flex-direction: column;
-
+    border: 1px solid #E8E8EA;
+    border-radius: 10px;
 }
 .blogItem-cover{
     width: 100%;
-    height: 250px;
+    height: 240px;
     object-fit: cover;
     border-radius: 20px;
     border-bottom: 0.5rem;
