--- a/src/components/Home/BlogList/BlogItem/style.css
+++ b/src/components/Home/BlogList/BlogItem/style.css
@@ -3,18 +3,25 @@
     flex-direction: column;
     border: 1px solid #E8E8EA;
     border-radius: 10px;
+    padding: 16px;
+    justify-content: space-between;
 }
+
 .blogItem-cover{
     width: 100%;
     height: 240px;
     object-fit: cover;
-    border-radius: 20px;
+    border-radius: 6px;
     border-bottom: 0.5rem;
 }
 
-.blogItem-wrap h3{
-    margin: 0.5rem 0.1rem 0;
+.blogItem-wrap h4{
+    /* margin: 0.5rem 0.1rem 0; */
     flex: 1;
+}
+
+.blogItem-body{
+    margin: 16px;
 }
 
 .blogItem-desc{
@@ -39,7 +46,11 @@
     margin-top: 1rem;
     justify-content: space-between;
 }
-
+.blogItem-wrap footer p{
+    size: 16px;
+    color: #97989F;
+    margin: 0px;
+}
 .blogItem-link{
     color: inherit;
     text-decoration: none;
@@ -51,15 +62,15 @@
 }
 
 .blogItem-author img{
-    width: 40px;
-    height: 40px;
-    border-radius: 50;
+    width: 36px;
+    height: 36px;
+    border-radius: 28px;
     object-fit: cover;
     margin-right: 0.5rem;
 }
 
 .blogItem-author p{
-    font-size: 0.6rem;
+    /* font-size: 0.6rem; */
     color: #a9a9a9;
     font-weight: 600;
 }
