--- a/src/components/common/Chip/style.css
+++ b/src/components/common/Chip/style.css
@@ -1,10 +1,11 @@
 .chip{
     font-size: 0.7rem;
-    background-image: linear-gradient(to right, #6190e8, #a7bfe8);
-    color: #fff;
+    /* background-image: linear-gradient(to right, #6190e8, #a7bfe8); */
+    background-color: rgb(75, 107, 251,0.05);
+    color: #4B6BFB;
     padding: 0.3rem 0.5rem;
     width: fit-content;
     text-transform: capitalize;
-    border-radius: 0.5rem;
-    margin: 0.5rem 0; 
+    border-radius: 6px;
+    margin: 16px 0; 
 }
