--- a/src/pages/Auth/style.css
+++ b/src/pages/Auth/style.css
@@ -7,8 +7,48 @@
     padding: 22px;
     display: flex;
 }
+.left-side {
+    display: flex;
+    flex-direction: column;
+}
+.left-side form{
+    margin: auto 140px;
+}
 
+.btn-auth{
+    background-color: #0C21C1;
+    border-radius: 32px;
+    padding: 14px 190px;
+    color: #fff;
+}
 
+.btn-auth:hover{
+    border-color: #0C21C1;
+    color: #0C21C1;
+    font-weight: 600;
+}
+
+.left-side form p{
+    margin: 0;
+}
+
+.left-side form .sub-desc{
+    margin: 25px 0px;
+}
+
+.form-group{
+    margin-top:50px;
+}
+
+.form-group label{
+    padding-left: 10px;
+}
+
+.form-group input{
+    border: 0px;
+    border-radius: 0px;
+    border-bottom: 2px solid #999999;
+}
 
 .logo{
     padding: 10px;
@@ -43,3 +83,4 @@
     font-family: Poppins;
     margin: 75px 100px;
 }
+
