--- a/src/pages/Blog/style.css
+++ b/src/pages/Blog/style.css
@@ -1,6 +1,6 @@
 .blog-wrap{
     margin: 0 auto;
-    max-width: 700px;
+    max-width: 800px;
 }
 
 .blog-goBack{
@@ -13,17 +13,19 @@
 }
 
 .blog-wrap header{
-    text-align: center
+    /* text-align: center */
 }
 
 .blog-date {
-    font-size: 0.8em;
+    /* font-size: 0.8em; */
+    margin-left: 24px;
     color: #a9a9a9;
     font-weight: 500;
 }
 
 .blog-wrap img{
     width: 100%;
+    border-radius: 12px;
 }
 
 .blog-subCategory{
