--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+:root{
+  --bg-color: aliceblue;
+  --primary-color: #0F52BA;
+  --primary-light-color: #B0C4DE;
+  --light-gray: rgb(230, 230, 230);
+}
+
 /*  Universal CSS */
 *, *::after, *::before{
   margin: 0;
@@ -8,7 +15,9 @@
 
 body{
   font-family: 'Montserrat', sans-serif;
+  background-color: var(--bg-color) !important;
 }
+
 
 button, input{
   font-family: 'Montserrat', sans-serif;
@@ -19,4 +28,9 @@ button, input{
   width: 95%;
   margin: 0 auto;
   padding: 1em 0;
+}
+
+.btn-primary:hover{
+  background-color: transparent !important;
+  border: 2px solid var(--primary-color);
 }
