--- a/src/components/Home/Hero/style.css
+++ b/src/components/Home/Hero/style.css
@@ -11,7 +11,7 @@
 
 .home-hero h1{
     font-size: 4rem;
-    color: #0f52ba;
+    color: var(--primary-color);
     margin-bottom: 1rem;
 }
 .home-hero h1 span{
