--- a/src/components/Home/SearchBar/style.css
+++ b/src/components/Home/SearchBar/style.css
@@ -28,6 +28,6 @@
     border: none;
     padding: 0.5rem 2rem;
     border-radius: 5px;
-    background-color: #0f52ba;
+    background-color: var(--primary-color);
     color: #fff;
 }
