--- a/src/components/Home/Footer/style.css
+++ b/src/components/Home/Footer/style.css
@@ -39,3 +39,66 @@ header.active{
 .logo span{
     color: #0F52BA;
 }
+.footer {
+    width: 100%;
+    text-align: center;
+    padding: 33px ;
+    background-color:#151423 ;
+    padding-bottom: 0px;
+  }
+  ul {
+    list-style-type: none;
+    color: #B0C4DE;
+    text-align: start;
+    padding: 0px !important;
+    
+  }
+
+  ul li{
+    margin: 10px 0px !important;
+  }
+
+  h2 {
+    list-style-type: none;
+    color: white;
+    text-align: start;
+    padding: 0px !important;
+    font-size: 24px !important ;
+    font-family: ;
+  }
+
+  h1 {
+    list-style-type: none;
+    color:white;
+    text-align: start;
+    padding: 0px !important;
+    font-size: 35px !important;
+  }
+  p{
+    color:#B0C4DE;
+    text-align: start;
+    padding: 0px !important;
+  }
+   
+  input{
+    border:1px solid #ccc;
+    outline: none;
+    padding: 0px 3px;
+    margin-left: 0px !important;
+    margin-right: 5px !important;
+    border-radius: 3px;
+  }
+
+  button{
+    border: none;
+    border-radius: 3px !important;
+    color: white;
+    background-color:#0F52BA !important;
+  }
+  .footer-div-2 ul{
+    margin: 0px !important;
+  }
+
+  .footer-div-2 li{
+    padding: 15px;
+  }
